--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -80,8 +80,8 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-13-SNAPSHOT"
-nrservices = "0.1.5-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-13"
+nrservices = "0.1.5"
 wheelpickerisd = "1.0.1-SNAPSHOT"
 
 [libraries]
