--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,33 +5,33 @@ targetSdk = "35"
 compileSdk = "35"
 
 # Dependencies
-kotlin = "2.1.21"
-kspPlugin = "2.1.21-2.0.1"
+kotlin = "2.2.0"
+kspPlugin = "2.2.0-2.0.2"
 
 # KMP
 coroutines = "1.10.2"
-compose-multiplatform = "1.8.1"
+compose-multiplatform = "1.8.2"
 composeIcons = "1.7.3"
-kmp-viewmodel = "1.0.0-BETA-11"
-kmp-nativecoroutines = "1.0.0-ALPHA-44"
-kotlinxDateTime = "0.6.2"
-kotlinxSerializationJson = "1.8.1"
-koin = "4.1.0-Beta8"
-konnection = "1.4.3"
-ktor = "3.1.3"
+kmp-viewmodel = "1.0.0-BETA-12"
+kmp-nativecoroutines = "1.0.0-ALPHA-45"
+kotlinxDateTime = "0.7.0"
+kotlinxSerializationJson = "1.9.0"
+koin = "4.1.0"
+konnection = "1.4.4"
+ktor = "3.2.1"
 multiplatformSettings = "1.3.0"
 napier = "2.7.1"
 sqlDelight = "2.1.0"
 turbine = "1.2.0"
 
 # Tools
-androidGradle = "8.10.0"
-bugfender = "3.4.1"
+androidGradle = "8.11.0"
+bugfender = "3.4.2"
 maven-publish = "0.32.0"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
 firebaseCrashlyticsGradle = "3.0.1"
-firebaseBOM = "33.14.0"
+firebaseBOM = "33.16.0"
 googleServices = "4.4.2"
 gradleVersions = "0.52.0"
 junit = "4.13.2"
@@ -43,27 +43,30 @@ timber = "5.0.1"
 # https://developer.android.com/jetpack/androidx/versions
 activity = "1.10.1"
 appcompat = "1.7.1"
-constraintLayout = "2.2.0"
+constraintLayout = "2.2.1"
 coreKtx = "1.16.0"
 fragment = "1.8.8"
-lifecycle = "2.9.0"
-navigation = "2.9.0"
-material = "1.13.0-alpha07"
+lifecycle = "2.9.1"
+navigation = "2.9.1"
+material = "1.14.0-alpha02"
 percentLayout = "1.0.0"
 preference = "1.2.1"
 recyclerView = "1.3.2"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
-work = "2.9.1"
+work = "2.10.2"
 secretsGradle = "2.0.1"
 androidx-ui-tooling = "1.7.4"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
-compose = "1.8.1"
+compose = "1.8.3"
 composeMaterial3 = "1.3.2"
 composeNavigation = "2.9.0-beta01"
-composeMaps = "6.2.1"
+composeMaps = "6.6.0"
+
+# https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html
+jetbrains-navigation-compose = "2.9.0-beta03"
 
 # Google
 accompanistSwipe = "0.35.1-alpha"
@@ -80,9 +83,9 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-14"
-nrservices = "0.1.7"
-wheelpickerisd = "1.0.1-SNAPSHOT"
+nrstations = "1.0.0-ALPHA-15"
+nrservices = "0.1.8"
+wheelpickerisd = "1.0.2"
 
 [libraries]
 # 1st party libs
@@ -114,7 +117,7 @@ multiplatformSettings-serialization = { module = "com.russhwolf:multiplatform-se
 multiplatformSettings-test = { module = "com.russhwolf:multiplatform-settings-test", version.ref = "multiplatformSettings" }
 
 # JetBrains Compose Multiplatform
-jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
+jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "jetbrains-navigation-compose" }
 jetbrains-material-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "composeIcons" }
 jetbrains-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
 
