--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ compileSdk = "35"
 # Dependencies
 kotlin = "2.2.0"
 kspPlugin = "2.2.0-2.0.2"
+androidKmpPlugin = "8.11.0"
 
 # KMP
 coroutines = "1.10.2"
@@ -84,7 +85,7 @@ tooltip = "0.2.0"
 
 # ISD
 nrstations = "1.0.0-ALPHA-15"
-nrservices = "0.1.8"
+nrservices = "0.1.9"
 wheelpickerisd = "1.0.2"
 
 [libraries]
@@ -209,6 +210,7 @@ composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-mu
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintGradle" }
 gradleVersions = { id = "com.github.ben-manes.versions", version.ref = "gradleVersions" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "androidKmpPlugin" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspPlugin" }
 kmpNativeCoroutines = { id = "com.rickclephas.kmp.nativecoroutines", version.ref = "kmp-nativecoroutines" }
