--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,8 @@ compileSdk = "35"
 # Dependencies
 kotlin = "2.2.0"
 kspPlugin = "2.2.0-2.0.2"
-androidKmpPlugin = "8.11.0"
+agp = "8.12.1"
+kotlinStdlib = "2.2.0"
 
 # KMP
 coroutines = "1.10.2"
@@ -26,7 +27,6 @@ sqlDelight = "2.1.0"
 turbine = "1.2.0"
 
 # Tools
-androidGradle = "8.11.0"
 bugfender = "3.4.2"
 maven-publish = "0.32.0"
 
@@ -58,6 +58,8 @@ testJunit = "1.1.3"
 work = "2.10.2"
 secretsGradle = "2.0.1"
 androidx-ui-tooling = "1.7.4"
+runner = "1.5.2"
+androidx-testExt = "1.2.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
@@ -86,15 +88,19 @@ tooltip = "0.2.0"
 # ISD
 nrstations = "1.0.0-ALPHA-15"
 nrservices = "0.1.10"
+tflstatus = "0.0.1"
 wheelpickerisd = "1.0.2"
 
 [libraries]
 # 1st party libs
 intsoftdev-stations = { module = "com.intsoftdev:nrstations", version.ref = "nrstations" }
 intsoftdev-services = { module = "com.intsoftdev:nrservices", version.ref = "nrservices" }
+intsoftdev-tflstatus = { module = "com.intsoftdev:tflstatus", version.ref = "tflstatus" }
+intsoftdev-tflstatus-ui = { module = "com.intsoftdev:tflstatus-ui", version.ref = "tflstatus" }
 intsoftdev-wheelpicker = { module = "com.intsoftdev:datetime-wheel-picker", version.ref = "wheelpickerisd" }
 # KMP
 coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "coroutines" }
 
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
@@ -106,6 +112,8 @@ ktor-client-json = { module = "io.ktor:ktor-client-json", version.ref = "ktor" }
 ktor-client-contentNegotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-common-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
 ktor-client-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
+
+kotlin-stdlib = { group = "org.jetbrains.kotlin", name = "kotlin-stdlib", version.ref = "kotlinStdlib" }
 
 kotlinx-dateTime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDateTime" }
 
@@ -150,8 +158,10 @@ androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayo
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
-androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose-android", version.ref = "lifecycle" }
-androidx-lifecycle-viewmodel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
+androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodel = {module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycle" }
 androidx-lifecycle-livedata = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle" }
 androidx-navigation-ui = { module = "androidx.navigation:navigation-ui-ktx", version.ref = "navigation" }
 androidx-navigation-fragment = { module = "androidx.navigation:navigation-fragment-ktx", version.ref = "navigation" }
@@ -201,16 +211,20 @@ junit = { module = "junit:junit", version.ref = "junit" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 roboelectric = { module = "org.robolectric:robolectric", version.ref = "roboelectric" }
 
+androidx-runner = { group = "androidx.test", name = "runner", version.ref = "runner" }
+androidx-testExt-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-testExt" }
+
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "androidGradle" }
-androidLibrary = { id = "com.android.library", version.ref = "androidGradle" }
+androidApplication = { id = "com.android.application", version.ref = "agp" }
+androidLibrary = { id = "com.android.library", version.ref = "agp" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 composeMultiplatform = { id = "org.jetbrains.compose", version.ref = "compose-multiplatform" }
 
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlintGradle" }
+androidLint = { id = "com.android.lint", version.ref = "agp" }
 gradleVersions = { id = "com.github.ben-manes.versions", version.ref = "gradleVersions" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
-android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "androidKmpPlugin" }
+android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "kspPlugin" }
 kmpNativeCoroutines = { id = "com.rickclephas.kmp.nativecoroutines", version.ref = "kmp-nativecoroutines" }
