--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,83 +1,86 @@
 [versions]
 # SDK Versions
 minSdk = "26"
-targetSdk = "35"
-compileSdk = "35"
+targetSdk = "36"
+compileSdk = "36"
 
 # Dependencies
-kotlin = "2.2.0"
-kspPlugin = "2.2.0-2.0.2"
-agp = "8.12.1"
-kotlinStdlib = "2.2.0"
+kotlin = "2.2.21"
+kspPlugin = "2.2.21-2.0.4"
+agp = "8.13.0"
+kotlinStdlib = "2.2.21"
 
 # KMP
 coroutines = "1.10.2"
-compose-multiplatform = "1.8.2"
+compose-multiplatform = "1.9.3"
 composeIcons = "1.7.3"
-kmp-viewmodel = "1.0.0-BETA-12"
-kmp-nativecoroutines = "1.0.0-ALPHA-45"
-kotlinxDateTime = "0.7.0"
+materialIcons = "1.7.8"
+kmp-viewmodel = "1.0.0"
+kmp-nativecoroutines = "1.0.0-ALPHA-48"
+kotlinxDateTime = "0.7.1"
 kotlinxSerializationJson = "1.9.0"
-koin = "4.1.0"
-konnection = "1.4.4"
-ktor = "3.2.1"
+koin = "4.1.1"
+konnection = "1.4.5"
+ktor = "3.3.3"
 multiplatformSettings = "1.3.0"
 napier = "2.7.1"
-sqlDelight = "2.1.0"
-turbine = "1.2.0"
+sqlDelight = "2.2.1"
+turbine = "1.2.1"
 
 # Tools
-bugfender = "3.4.2"
+bugfender = "3.5.0"
 maven-publish = "0.32.0"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
 firebaseCrashlyticsGradle = "3.0.1"
 firebaseBOM = "33.16.0"
 googleServices = "4.4.2"
-gradleVersions = "0.52.0"
+gradleVersions = "0.53.0"
 junit = "4.13.2"
-ktlintGradle = "12.3.0"
+ktlintGradle = "14.0.1"
 roboelectric = "4.11.1"
 timber = "5.0.1"
 
 # AndroidX
 # https://developer.android.com/jetpack/androidx/versions
-activity = "1.10.1"
+activity = "1.12.0"
 appcompat = "1.7.1"
 constraintLayout = "2.2.1"
-coreKtx = "1.16.0"
-fragment = "1.8.8"
-lifecycle = "2.9.1"
-navigation = "2.9.1"
+coreKtx = "1.17.0"
+fragment = "1.8.9"
+lifecycle = "2.10.0"
+jbLifecycle = "2.9.6"
+navigation = "2.9.6"
 material = "1.14.0-alpha02"
 percentLayout = "1.0.0"
 preference = "1.2.1"
 recyclerView = "1.3.2"
 swipeLayout = "1.1.0"
 testJunit = "1.1.3"
-work = "2.10.2"
+work = "2.11.0"
 secretsGradle = "2.0.1"
-androidx-ui-tooling = "1.7.4"
+androidx-ui-tooling = "1.9.5"
 runner = "1.5.2"
 androidx-testExt = "1.2.1"
 
 # Compose
 # https://developer.android.com/jetpack/androidx/versions
-compose = "1.8.3"
-composeMaterial3 = "1.3.2"
-composeNavigation = "2.9.0-beta01"
-composeMaps = "6.6.0"
+compose = "1.9.5"
+composeMaterial3 = "1.4.0"
+composeNavigation = "2.9.6"
+composeMaps = "6.12.2"
 
 # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-navigation-routing.html
-jetbrains-navigation-compose = "2.9.0-beta03"
+jetbrains-navigation-compose = "2.9.1"
 
 # Google
 accompanistSwipe = "0.35.1-alpha"
 googleBilling = "7.1.1"
 gson = "2.11.0"
 permissionsDispatcher = "4.9.1"
-playMaps = "19.0.0"
+playMaps = "19.2.0"
 playLocation = "21.3.0"
+playReview = "2.0.2"
 
 # Third-party
 advancedRecycler = "1.0.0"
@@ -86,9 +89,9 @@ shimmer = "0.5.0"
 tooltip = "0.2.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-16"
+nrstations = "1.0.0-ALPHA-17"
 nrservices = "0.1.11"
-tflstatus = "0.0.2"
+tflstatus = "0.0.3"
 wheelpickerisd = "1.0.2"
 
 [libraries]
@@ -158,8 +161,8 @@ androidx-constraintlayout = { module = "androidx.constraintlayout:constraintlayo
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 androidx-fragment-ktx = { module = "androidx.fragment:fragment-ktx", version.ref = "fragment" }
 androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
-androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
-androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
+androidx-lifecycle-viewmodelCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "jbLifecycle" }
+androidx-lifecycle-runtimeCompose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "jbLifecycle" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycle" }
 androidx-lifecycle-viewmodel = {module = "androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycle" }
 androidx-lifecycle-livedata = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycle" }
@@ -186,6 +189,7 @@ compose-livedata = { module = "androidx.compose.runtime:runtime-livedata", versi
 compose-viewbinding = { module = "androidx.compose.ui:ui-viewbinding", version.ref = "compose" }
 compose-rx = { module = "androidx.compose.runtime:runtime-rxjava2", version.ref = "compose" }
 compose-maps = { module = "com.google.maps.android:maps-compose", version.ref = "composeMaps" }
+compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
 
 # Google
 google-accompanist-swipeRefresh = { module = "com.google.accompanist:accompanist-swiperefresh", version.ref = "accompanistSwipe" }
@@ -196,6 +200,8 @@ android_permissions_dispatcher_processor = { module = "com.github.permissions-di
 google_gms_maps = { module = "com.google.android.gms:play-services-maps", version.ref = "playMaps" }
 google_gms_location = { module = "com.google.android.gms:play-services-location", version.ref = "playLocation" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBOM" }
+google-play-review = { module = "com.google.android.play:review", version.ref = "playReview" }
+google-play-review-ktx = { module = "com.google.android.play:review-ktx", version.ref = "playReview" }
 
 # Third-party
 material-dialogs = { module = "com.afollestad.material-dialogs:core", version.ref = "materialDialogs" }
