--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -33,7 +33,7 @@ maven-publish = "0.32.0"
 
 # https://firebase.google.com/docs/android/setup#kotlin+ktx_2
 firebaseCrashlyticsGradle = "3.0.1"
-firebaseBOM = "33.16.0"
+firebaseBOM = "34.6.0"
 googleServices = "4.4.2"
 gradleVersions = "0.53.0"
 junit = "4.13.2"
@@ -87,10 +87,11 @@ advancedRecycler = "1.0.0"
 materialDialogs = "3.3.0"
 shimmer = "0.5.0"
 tooltip = "0.2.0"
+atomicfu = "0.24.0"
 
 # ISD
 nrstations = "1.0.0-ALPHA-17"
-nrservices = "0.1.12"
+nrservices = "0.1.13"
 tflstatus = "0.0.3"
 wheelpickerisd = "1.0.3"
 
@@ -211,6 +212,7 @@ bugfender-sdk = { module = "com.bugfender.sdk:android", version.ref = "bugfender
 tooltip-library = { module = "com.github.vihtarb:tooltip", version.ref = "tooltip" }
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 advanced-recycler = { module = "com.h6ah4i.android.widget.advrecyclerview:advrecyclerview", version.ref = "advancedRecycler" }
+kotlinx-atomicfu = { module = "org.jetbrains.kotlinx:atomicfu", version.ref = "atomicfu" }
 
 # Tools
 junit = { module = "junit:junit", version.ref = "junit" }
