--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,8 @@ kotlinStdlib = "2.2.21"
 
 # KMP
 coroutines = "1.10.2"
-compose-multiplatform = "1.9.3"
+compose-multiplatform = "1.10.0-rc02"
+jb-compose-material3 = "1.10.0-alpha05"
 composeIcons = "1.7.3"
 materialIcons = "1.7.8"
 kmp-viewmodel = "1.0.0"
@@ -90,10 +91,10 @@ tooltip = "0.2.0"
 atomicfu = "0.24.0"
 
 # ISD
-nrstations = "1.0.0-ALPHA-17"
+nrstations = "1.0.0-ALPHA-18"
 nrservices = "0.1.13"
-tflstatus = "0.0.3"
-wheelpickerisd = "1.0.3"
+tflstatus = "0.0.4"
+wheelpickerisd = "1.0.4"
 
 [libraries]
 # 1st party libs
@@ -133,6 +134,12 @@ multiplatformSettings-test = { module = "com.russhwolf:multiplatform-settings-te
 jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "jetbrains-navigation-compose" }
 jetbrains-material-core = { module = "org.jetbrains.compose.material:material-icons-core", version.ref = "composeIcons" }
 jetbrains-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
+jetbrains-compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose-multiplatform" }
+jetbrains-compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "compose-multiplatform" }
+jetbrains-compose-material3 = { module = "org.jetbrains.compose.material3:material3", version.ref = "jb-compose-material3" }
+jetbrains-compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose-multiplatform" }
+jetbrains-compose-components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "compose-multiplatform" }
+jetbrains-compose-ui-tooling-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "compose-multiplatform" }
 
 konnection = { module = "dev.tmapps:konnection", version.ref = "konnection" }
 napier-logger = { module = "io.github.aakira:napier", version.ref = "napier" }
